# mqt-core

./: .pre-commit-config.yaml  CHANGELOG.md  UPGRADING.md  pyproject.toml  simple.qasm
.github/: CONTRIBUTING.md  renovate.json5
.github/workflows/: ci.yml
cmake/: AddMQTPythonBinding.cmake
docs/: dd_package_evaluation.md
docs/qdmi/: ddsim_device.md  driver.md  index.md  qdmi_backend.md
include/mqt-core/ir/operations/: OpType.inc
json/sc/: device.json
mlir/lib/Compiler/: CompilerPipeline.cpp
mlir/lib/Dialect/MQTOpt/Transforms/: AdaptCtrldPauliZToLiftingPattern.cpp  LiftHadamardsAboveCNOTPattern.cpp  (+6 more)
mlir/tools/: CMakeLists.txt
mlir/tools/mqt-cc/: mqt-cc.cpp
mlir/tools/opt-evaluation/: CMakeLists.txt  opt-evaluation.cpp
mlir/tools/qasm-opt/: CMakeLists.txt  qasm-opt.cpp
mlir/tools/quantum-opt/: quantum-opt.cpp
mlir/unittests/: CMakeLists.txt
mlir/unittests/ConstantPropagation/: CMakeLists.txt  test_hybridstate.cpp  test_qubitstate.cpp  test_rewritechecker.cpp  test_uniontable.cpp
mlir/unittests/dialect/: CMakeLists.txt
mlir/unittests/translation/: CMakeLists.txt
python/mqt/core/: fomac.pyi
python/mqt/core/_compat/: optional.py
python/mqt/core/ir/: __init__.pyi
src/fomac/: CMakeLists.txt
src/qdmi/: CMakeLists.txt
src/qdmi/dd/: CMakeLists.txt
src/qdmi/na/: CMakeLists.txt
src/qdmi/sc/: CMakeLists.txt
test/fomac/: CMakeLists.txt
test/python/fomac/: test_fomac.py
test/python/plugins/qiskit/: conftest.py  test_backend.py
test/qdmi/: CMakeLists.txt
test/qdmi/dd/: CMakeLists.txt
test/qdmi/sc/: CMakeLists.txt
(+25 files in other folders)
